--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
                   </p>
                   <h1>
-                      <a href="http://180io.com/public/mouseshrink.html">Latest Website</a>
+                      <a href="http://180io.com/public/lightning.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -324,9 +324,10 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                                  <a href="http://180io.com/public/spacelines.html" target="_blank">Day One Hundred Twenty - Space Lines<br></a>
                                                 <a href="http://180io.com/public/worm.html" target="_blank">Day One Hundred Twenty One - Worm<br></a>
                                                 <a href="http://180io.com/public/mouseshrink.html" target="_blank">Day One Hundred Twenty Two - Mouse Shrink<br></a>
-                                                <!--<a href="http://180io.com/public/lightning.html" target="_blank">Day One Hundred Twenty Three - Lightning<br></a>
-                                                <a href="http://180io.com/public/abstract.html" target="_blank">Day One Hundred Twenty Four - Abstract<br></a>
-                                                <a href="http://180io.com/public/mousetracker.html" target="_blank">Day One Hundred Twenty Five - Mouse Tracker<br></a>-->
+                                                <a href="http://180io.com/public/lightning.html" target="_blank">Day One Hundred Twenty Three - Lightning<br></a>
+                                                <!--<a href="http://180io.com/public/abstract.html" target="_blank">Day One Hundred Twenty Four - Abstract<br></a>
+                                                <a href="http://180io.com/public/mousetracker.html" target="_blank">Day One Hundred Twenty Five - Mouse Tracker<br></a>
+                                                 <a href="http://180io.com/public/explore.html" target="_blank">Day One Hundred Twenty Six - Explore<br></a>-->
 								</div>
               </div>
             </div>
@@ -354,7 +355,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>I got 180 problems<span>but <em>122</em> are done</span></h1>
+                <h1>I got 180 problems<span>but <em>123</em> are done</span></h1>
               </div>
             </div>
           </div>
