--- a/public/fire.html
+++ b/public/fire.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="/public/css/fire.css" />
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
-<script src="/public/js/analytics.js></script>
+<script src="/public/js/analytics.js"></script>
 	</head>
 	<body>
   <canvas id="canvas"></canvas>
