--- a/public/explosion.html
+++ b/public/explosion.html
@@ -16,6 +16,6 @@
 	<body>
   <canvas id="canv"></canvas>
   <script src="/public/js/lib/feather.js"></script>
-<script src="/public/js/fire.js"></script>
+<script src="/public/js/explosion.js"></script>
 	</body>
 </html>
