--- a/public/spiral.html
+++ b/public/spiral.html
@@ -18,6 +18,6 @@
 	<canvas id="canv"></canvas>
 	<div class="message">Move your mouse around the screen.</div>
 	<script src="/public/js/lib/tweenmax.min.js"></script>
-    <script src="/public/js/spiral.js></script>
+    <script src="/public/js/spiral.js"></script>
 	</body>
 </html>
