--- a/public/randomwords.html
+++ b/public/randomwords.html
@@ -12,12 +12,13 @@
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
 <script src="/public/js/analytics.js"></script>
+<link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 	<h1>
   <svg role="img"><title class="title">Random Words!    </title><text class="word" dominant-baseline="central" fill="#222" stroke="#222" stroke-linecap="round" stroke-width="1.5%" text-anchor="middle" x="50%" y="50%">Random Words!</text><text class="word" dominant-baseline="central" fill="white" text-anchor="middle" x="50%" y="50%">Random Words!</text></svg>
 </h1>
-<script src="/public/js/lib/jquery.min.js></script>
+<script src="/public/js/lib/jquery.min.js"></script>
     <script src="/public/js/randomwords.js"></script>
 	</body>
 </html>
