--- a/public/randomwords.html
+++ b/public/randomwords.html
@@ -8,11 +8,12 @@
     <meta name="author" content="Kabir Shah">
 
 		<title>Random Words</title>
+		<link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="/public/css/randomwords.css" />
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
 <script src="/public/js/analytics.js"></script>
-<link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
+
 	</head>
 	<body>
 	<h1>
