--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
                   </p>
                   <h1>
-                      <a href="http://180io.com/public/trail.html">Latest Website</a>
+                      <a href="http://180io.com/public/more.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -331,9 +331,11 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                                   <a href="http://180io.com/public/fire.html" target="_blank">Day One Hundred Twenty Seven - Fire<br></a>
                                                   <a href="http://180io.com/public/explosion.html" target="_blank">Day One Hundred Twenty Eight - Explosion<br></a>
                                                   <a href="http://180io.com/public/trail.html" target="_blank">Day One Hundred Twenty Nine - Trail<br></a>
-                                                  <!--<a href="http://180io.com/public/spiral.html" target="_blank">Day One Hundred Thirty - Spiral<br></a>
-                                                  <a href="http://180io.com/public/more.html" target="_blank">Day One Hundred Thirty One - More<br></a>
-                                                  <a href="http://180io.com/public/tree.html" target="_blank">Day One Hundred Thirty Two - Tree<br></a>-->
+                                                  <a href="http://180io.com/public/spiral.html" target="_blank">Day One Hundred Thirty - Spiral<br></a>
+                                                 <a href="http://180io.com/public/more.html" target="_blank">Day One Hundred Thirty One - More<br></a>
+                                                  <!--<a href="http://180io.com/public/tree.html" target="_blank">Day One Hundred Thirty Two - Tree<br></a>
+                                                  <a href="http://180io.com/public/randomwords.html" target="_blank">Day One Hundred Thirty Three - Random Words<br></a>
+                                                  <a href="http://180io.com/public/attract.html" target="_blank">Day One Hundred Thirty Four - Attract<br></a>-->
 								</div>
               </div>
             </div>
@@ -361,7 +363,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>I got 180 problems<span>but <em>129</em> are done</span></h1>
+                <h1>I got 180 problems<span>but <em>131</em> are done</span></h1>
               </div>
             </div>
           </div>
