--- a/index.html
+++ b/index.html
@@ -336,7 +336,8 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                                  <a href="http://180io.com/public/tree.html" target="_blank">Day One Hundred Thirty Two - Tree<br></a>
                                                    <!--<a href="http://180io.com/public/randomwords.html" target="_blank">Day One Hundred Thirty Three - Random Words<br></a>
                                                   <a href="http://180io.com/public/attract.html" target="_blank">Day One Hundred Thirty Four - Attract<br></a>
-                                                  <a href="http://180io.com/public/tiefighters.html" target="_blank">Day One Hundred Thirty Five - Tie Fighters<br></a>-->
+                                                  <a href="http://180io.com/public/tiefighters.html" target="_blank">Day One Hundred Thirty Five - Tie Fighters<br></a>
+                                                  <a href="http://180io.com/public/toyball.html" target="_blank">Day One Hundred Thirty Six - Toy Ball<br></a>-->
 								</div>
               </div>
             </div>
