--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
                   </p>
                   <h1>
-                      <a href="http://180io.com/public/randomwords.html">Latest Website</a>
+                      <a href="http://180io.com/public/attract.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -335,9 +335,10 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                                  <a href="http://180io.com/public/more.html" target="_blank">Day One Hundred Thirty One - More<br></a>
                                                  <a href="http://180io.com/public/tree.html" target="_blank">Day One Hundred Thirty Two - Tree<br></a>
                                                    <a href="http://180io.com/public/randomwords.html" target="_blank">Day One Hundred Thirty Three - Random Words<br></a>
-                                                  <!--<a href="http://180io.com/public/attract.html" target="_blank">Day One Hundred Thirty Four - Attract<br></a>
-                                                  <a href="http://180io.com/public/tiefighters.html" target="_blank">Day One Hundred Thirty Five - Tie Fighters<br></a>
-                                                  <a href="http://180io.com/public/toyball.html" target="_blank">Day One Hundred Thirty Six - Toy Ball<br></a>-->
+                                                  <a href="http://180io.com/public/attract.html" target="_blank">Day One Hundred Thirty Four - Attract<br></a>
+                                                  <!--<a href="http://180io.com/public/tiefighters.html" target="_blank">Day One Hundred Thirty Five - Tie Fighters<br></a>
+                                                  <a href="http://180io.com/public/toyball.html" target="_blank">Day One Hundred Thirty Six - Toy Ball<br></a>
+                                                   <a href="http://180io.com/public/rocket.html" target="_blank">Day One Hundred Thirty Seven - Rocket<br></a>-->
 								</div>
               </div>
             </div>
@@ -365,7 +366,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>I got 180 problems<span>but <em>133</em> are done</span></h1>
+                <h1>I got 180 problems<span>but <em>134</em> are done</span></h1>
               </div>
             </div>
           </div>
