--- a/static/public/rps.html
+++ b/static/public/rps.html
@@ -15,7 +15,26 @@
 
 	</head>
 	<body>
-	<canvas id="canv"></canvas>
+	<header>
+  <div class = "wrapper">
+  <h1>It's time to settle this.</h1>
+  </div>
+</header>
+<section class = "selections">
+  <button class = "choice" id="rock">
+  <i class="fa fa-hand-rock-o"></i>
+  <p>Rock</p>
+  </button>
+  <button class = "choice" id="paper">
+  <i class="fa fa-hand-paper-o"></i>
+  <p>Paper</p>
+  </button>
+  <button class = "choice" id="scissors">
+  <i class="fa fa-hand-scissors-o"></i>
+  <p>Scissors</p>
+  </button>
+  <h2>Make your move.<h2>
+</section>
 	<script src="/public/js/lib/jquery.min.js"></script>
     <script src="/public/js/rps.js"></script>
 	</body>
