--- a/static/public/rps.html
+++ b/static/public/rps.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Kabir Shah">
 
 		<title>Rock, Paper, Scissors</title>
+		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" />
 		<link rel="stylesheet" type="text/css" href="/public/css/rps.css" />
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
