--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
                   </p>
                   <h1>
-                      <a href="http://180io.com/public/toyball.html">Latest Website</a>
+                      <a href="http://180io.com/public/rocket.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -338,9 +338,10 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                                   <a href="http://180io.com/public/attract.html" target="_blank">Day One Hundred Thirty Four - Attract<br></a>
                                                   <a href="http://180io.com/public/tiefighter.html" target="_blank">Day One Hundred Thirty Five - Tie Fighters<br></a>
                                                  <a href="http://180io.com/public/toyball.html" target="_blank">Day One Hundred Thirty Six - Toy Ball<br></a>
-                                                    <!--<a href="http://180io.com/public/rocket.html" target="_blank">Day One Hundred Thirty Seven - Rocket<br></a>
-                                                   <a href="http://180io.com/public/rps.html" target="_blank">Day One Hundred Thirty Eight - Rock, Paper, Scissors<br></a>
-                                                   <a href="http://180io.com/public/todo2.html" target="_blank">Day One Hundred Thirty Nine - Todo 2.0<br></a>-->
+                                                    <a href="http://180io.com/public/rocket.html" target="_blank">Day One Hundred Thirty Seven - Rocket<br></a>
+                                                   <!--<a href="http://180io.com/public/rps.html" target="_blank">Day One Hundred Thirty Eight - Rock, Paper, Scissors<br></a>
+                                                   <a href="http://180io.com/public/todo2.html" target="_blank">Day One Hundred Thirty Nine - Todo 2.0<br></a>
+                                                    <a href="http://180io.com/public/sparks.html" target="_blank">Day One Hundred Fourty - Sparks<br></a>-->
 								</div>
               </div>
             </div>
@@ -368,7 +369,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>I got 180 problems<span>but <em>136</em> are done</span></h1>
+                <h1>I got 180 problems<span>but <em>137</em> are done</span></h1>
               </div>
             </div>
           </div>
