--- a/public/platform.html
+++ b/public/platform.html
@@ -17,6 +17,7 @@
 
 <body>
 	<div id="game"></div>
+	<script src="/public/js/lib/crafty.min.js"></script>
   <script src="/public/js/platform.js"></script>
 </body>
 
