--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
                   </p>
                   <h1>
-                      <a href="http://180io.com/public/pomorodo.html">Latest Website</a>
+                      <a href="http://180io.com/public/dizzy.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -343,9 +343,10 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                                     <a href="http://180io.com/public/todo2.html" target="_blank">Day One Hundred Thirty Nine - Todo 2.0<br></a>
                                                     <a href="http://180io.com/public/sparks.html" target="_blank">Day One Hundred Fourty - Sparks<br></a>
                                                     <a href="http://180io.com/public/pomorodo.html" target="_blank">Day One Hundred Fourty One - Pomorodo<br></a>
-                                                    <!--<a href="http://180io.com/public/dizzy.html" target="_blank">Day One Hundred Fourty Two - Dizzy<br></a>
-                                                    <a href="http://180io.com/public/platform.html" target="_blank">Day One Hundred Fourty Three - Platform<br></a>
-                                                    <a href="http://180io.com/public/bubble.html" target="_blank">Day One Hundred Fourty Four - Bubble<br></a>-->
+                                                    <a href="http://180io.com/public/dizzy.html" target="_blank">Day One Hundred Fourty Two - Dizzy<br></a>
+                                                    <!--<a href="http://180io.com/public/platform.html" target="_blank">Day One Hundred Fourty Three - Platform<br></a>
+                                                    <a href="http://180io.com/public/bubble.html" target="_blank">Day One Hundred Fourty Four - Bubble<br></a>
+                                                    <a href="http://180io.com/public/scrollspeed.html" target="_blank">Day One Hundred Fourty Five - Scroll Speed<br></a>-->
 								</div>
               </div>
             </div>
@@ -373,7 +374,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>I got 180 problems<span>but <em>141</em> are done</span></h1>
+                <h1>I got 180 problems<span>but <em>142</em> are done</span></h1>
               </div>
             </div>
           </div>
