--- a/public/takenotes2.html
+++ b/public/takenotes2.html
@@ -18,7 +18,7 @@
 <body>
 	<!-- Make a textarea!-->
 <section class="box">
-  <section class="paper" id="note-detail"> <textarea type="text" placeholder="Type your note here" id="myNote"></textarea> </section>
+  <section class="paper" id="note-detail"> <textarea type="text" placeholder="Type your note here" id="notepad"></textarea> </section>
 </section>
   <script src="/public/js/takenotes2.js"></script>
 </body>
