--- a/public/clickcode.html
+++ b/public/clickcode.html
@@ -21,6 +21,7 @@
 <div class='status' id='error'>Ops, try again!</div>
 <div class='status' id='success'>Yeah! Welcome!</div>
 <div id='show'>Show Correct Password</div>
+<script src="/public/js/lib/jquery.min.js"></script>
   <script src="/public/js/clickcode.js"></script>
 </body>
 
