--- a/public/flight.html
+++ b/public/flight.html
@@ -16,7 +16,209 @@
 </head>
 
 <body>
-<canvas id="canv"></canvas>
+
+<div class="wrap">
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+  <div class="c"></div>
+</div>
   <script src="/public/js/flight.js"></script>
 </body>
 
