--- a/public/flight.html
+++ b/public/flight.html
@@ -219,8 +219,8 @@
   <div class="c"></div>
   <div class="c"></div>
 </div>
-<script src="/public/js//lib/jquery.min.js"></script>
-<script src="/public/js//lib/tweenmax.js"></script>
+<script src="/public/js/lib/jquery.min.js"></script>
+<script src="/public/js/lib/tweenmax.js"></script>
   <script src="/public/js/flight.js"></script>
 </body>
 
