--- a/public/pixelparty.html
+++ b/public/pixelparty.html
@@ -16,7 +16,13 @@
 </head>
 
 <body>
+
 <canvas id="canv"></canvas>
+<h1 id="inst">Move Your Mouse/Click</h1>
+<!-- Move Your Mouse to Generate-->
+<!-- Some more Pixels!-->
+<!-- Click to make even MORE!-->
+<!-- Yay!-->
   <script src="/public/js/pixelparty.js"></script>
 </body>
 
