--- a/index.html
+++ b/index.html
@@ -351,7 +351,8 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                                     <a href="http://180io.com/public/takenotes2.html" target="_blank">Day One Hundred Fourty Seven - Take Notes 2.0<br></a>
                                                     <!--<a href="http://180io.com/public/clickcode.html" target="_blank">Day One Hundred Fourty Eight - Click Code<br></a>
                                                     <a href="http://180io.com/public/rain2.html" target="_blank">Day One Hundred Fourty Nine - Rain 2.0<br></a>
-                                                    <a href="http://180io.com/public/pixelparty.html" target="_blank">Day One Hundred Fifty - Pixel Party<br></a>-->
+                                                    <a href="http://180io.com/public/pixelparty.html" target="_blank">Day One Hundred Fifty - Pixel Party<br></a>
+                                                    <a href="http://180io.com/public/flight.html" target="_blank">Day One Hundred Fifty One - Flight<br></a>-->
 								</div>
               </div>
             </div>
