--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
                   </p>
                   <h1>
-                      <a href="http://180io.com/public/clickcode.html">Latest Website</a>
+                      <a href="http://180io.com/public/rain2.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -350,9 +350,10 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                                      <a href="http://180io.com/public/player.html" target="_blank">Day One Hundred Fourty Six - Player<br></a>
                                                     <a href="http://180io.com/public/takenotes2.html" target="_blank">Day One Hundred Fourty Seven - Take Notes 2.0<br></a>
                                                     <a href="http://180io.com/public/clickcode.html" target="_blank">Day One Hundred Fourty Eight - Click Code<br></a>
-                                                    <!--<a href="http://180io.com/public/rain2.html" target="_blank">Day One Hundred Fourty Nine - Rain 2.0<br></a>
-                                                    <a href="http://180io.com/public/pixelparty.html" target="_blank">Day One Hundred Fifty - Pixel Party<br></a>
-                                                    <a href="http://180io.com/public/flight.html" target="_blank">Day One Hundred Fifty One - Flight<br></a>-->
+                                                    <a href="http://180io.com/public/rain2.html" target="_blank">Day One Hundred Fourty Nine - Rain 2.0<br></a>
+                                                    <!--<a href="http://180io.com/public/pixelparty.html" target="_blank">Day One Hundred Fifty - Pixel Party<br></a>
+                                                    <a href="http://180io.com/public/flight.html" target="_blank">Day One Hundred Fifty One - Flight<br></a>
+                                                     <a href="http://180io.com/public/colorrange.html" target="_blank">Day One Hundred Fifty Two - Color Range<br></a>-->
 								</div>
               </div>
             </div>
@@ -380,7 +381,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>I got 180 problems<span>but <em>148</em> are done</span></h1>
+                <h1>I got 180 problems<span>but <em>149</em> are done</span></h1>
               </div>
             </div>
           </div>
