--- a/public/confetti.html
+++ b/public/confetti.html
@@ -21,7 +21,7 @@
 </script>
 	</head>
 	<body>
-		<canvas id='confeti'></canvas>
+		<canvas id='canv'></canvas>
 		<script src="/public/js/confetti.js"></script>
 	</body>
 </html>
