--- a/public/quoteipsum.html
+++ b/public/quoteipsum.html
@@ -14,7 +14,7 @@
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
 	</head>
 	<body>
-
+<!-- Quote-Ipsum's design and CSS is taken from Hendry Sadrak, the Quote-Ipsum Mechanics Were Made By Me -->
 <div class="wrap">
   <h1>Quote-Ipsum Generator</h1><a class="gen-btn">Generate me some!</a>
 </div>
