Chance /public/ to /public/js

--- a/public/matrix.html
+++ b/public/matrix.html
@@ -17,8 +17,8 @@
 
 <body>
 <canvas id="canv"></canvas>
-<script src="/public/lib/feather.min.js"></script>
-<script src="/public/matrix.js"></script>
+<script src="/public/js/lib/feather.min.js"></script>
+<script src="/public/js/matrix.js"></script>
 </body>
 
 </html>
