--- a/public/flight.html
+++ b/public/flight.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-
+<!-- Inspired and Adapted From Nate Wiley's Flight Codepen -->
 <div class="wrap">
   <div class="c"></div>
   <div class="c"></div>
