--- a/public/tentacles.html
+++ b/public/tentacles.html
@@ -14,7 +14,7 @@
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
 	</head>
 	<body>
-	<canvas id="canvas"></canvas>
+	<canvas id="canv"></canvas>
 <div id="clic" nowrap>CLICK TO CREATE TENTACLES</div>
 <script src="/public/js/tentacles.js"></script>
 	</body>
