--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
                   </p>
                   <h1>
-                      <a href="http://180io.com/public/colorrange.html">Latest Website</a>
+                      <a href="http://180io.com/public/highlight.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -355,9 +355,10 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                                     <a href="http://180io.com/public/pixelparty.html" target="_blank">Day One Hundred Fifty - Pixel Party<br></a>
                                                     <a href="http://180io.com/public/flight.html" target="_blank">Day One Hundred Fifty One - Flight<br></a>
                                                     <a href="http://180io.com/public/colorrange.html" target="_blank">Day One Hundred Fifty Two - Color Range<br></a>
-                                                       <!--<a href="http://180io.com/public/highlight.html" target="_blank">Day One Hundred Fifty Three - Highlight<br></a>
-                                                      <a href="http://180io.com/public/matrix.html" target="_blank">Day One Hundred Fifty Four - Matrix<br></a>
-                                                      <a href="http://180io.com/public/tentacles2.html" target="_blank">Day One Hundred Fifty Four - Tentacles 2.0<br></a>-->
+                                                       <a href="http://180io.com/public/highlight.html" target="_blank">Day One Hundred Fifty Three - Highlight<br></a>
+                                                      <!--<a href="http://180io.com/public/matrix.html" target="_blank">Day One Hundred Fifty Four - Matrix<br></a>
+                                                      <a href="http://180io.com/public/tentacles2.html" target="_blank">Day One Hundred Fifty Four - Tentacles 2.0<br></a>
+                                                      <a href="http://180io.com/public/neonbubbles.html" target="_blank">Day One Hundred Fifty Five - Neon Bubbles<br></a>-->
 								</div>
               </div>
             </div>
@@ -385,7 +386,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>I got 180 problems<span>but <em>152</em> are done</span></h1>
+                <h1>I got 180 problems<span>but <em>153</em> are done</span></h1>
               </div>
             </div>
           </div>
