--- a/public/fontsize.html
+++ b/public/fontsize.html
@@ -20,7 +20,7 @@
   <h1>Change My Font-Size</h1><span id="ypm" class="input cool-input">
     <input id="input" type="text" m-model="size" class="field cool-field"/>
     <label for="input-13" class="label cool-label"><span data-content="Enter a Font-Size" class="label-content cool-label-content">Font-Size</span></label></span>
-<script src="/public/lib/latestmoon.min.js"></script>
+<script src="/public/js/lib/latestmoon.min.js"></script>
 <script src="/public/js/fontsize.js"></script>
 </body>
 
