--- a/public/urlcode.html
+++ b/public/urlcode.html
@@ -16,9 +16,9 @@
 </head>
 
 <body>
-  <h1>Change My Font-Size</h1><span id="ypm" class="input cool-input">
+  <h1>Change The URL Code</h1><span id="ypm" class="input cool-input">
     <input id="input" type="text" m-model="size" class="field cool-field"/>
-    <label for="input-13" class="label cool-label"><span data-content="Enter a Font-Size" class="label-content cool-label-content">Font-Size</span></label></span>
+    <label for="input-13" class="label cool-label"><span data-content="Enter Some Text" class="label-content cool-label-content">URL Code</span></label></span>
 <script src="/public/js/lib/paint.min.js"></script>
 <script src="/public/js/urlcode.js"></script>
 </body>
