--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                                       <a href="http://180io.com/public/neonbubbles.html" target="_blank">Day One Hundred Fifty Six - Neon Bubbles<br></a>
                                                       <!--<a href="http://180io.com/public/fontsize.html" target="_blank">Day One Hundred Fifty Seven - Font Size<br></a>
                                                       <a href="http://180io.com/public/flyingwords.html" target="_blank">Day One Hundred Fifty Eight - Flying Words<br></a>
-                                                      <a href="http://180io.com/public/alivedrawing.html" target="_blank">Day One Hundred Fifty Nine - Alive Drawing<br></a>-->
+                                                      <a href="http://180io.com/public/explosivedrawing.html" target="_blank">Day One Hundred Fifty Nine - Explosive Drawing<br></a>-->
 								</div>
               </div>
             </div>
