--- a/public/coin.html
+++ b/public/coin.html
@@ -21,7 +21,7 @@
 <div>
 		 <div class="image"></div>
 		 <h1 id="result">HEADS OR TAILS?</h1>
-		 <button href="#" class="flip"><span>FLIP THE COIN</span></button>
+		 <button href="#" class="flipCoin"><span>FLIP THE COIN</span></button>
 </div>
 <script src="/public/js/lib/jquery.min.js"></script>
   <script src="/public/js/coin.js"></script>
