--- a/public/randomgradient.html
+++ b/public/randomgradient.html
@@ -22,7 +22,7 @@
 <div id='main'>
   <h1>Random Gradient</h1>
   <p>press space for more</p>
-  <div class='output' data-clipboard-target="#gradient" data-balloon="Copy To Clipboard" data-balloon-pos="up">
+  <div class='output' data-clipboard-target="#gradient" data-balloon="Copied!" data-balloon-pos="up">
     <div id='gradient'></div>
   </div>
 </div>
