--- a/public/randomgradient.html
+++ b/public/randomgradient.html
@@ -9,7 +9,7 @@
 
   <title>Random Gradient</title>
   <link rel="stylesheet" type="text/css" href="/public/css/lib/balloon.css" />
-  <link rel="stylesheet" type="text/css" href="/public/css/gradient.css" />
+  <link rel="stylesheet" type="text/css" href="/public/css/randomgradient.css" />
   <link rel="shortcut icon" type="image/png" href="/favicon.png" />
   <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png" />
   <script src="/public/js/analytics.js"></script>
@@ -27,7 +27,7 @@
   </div>
 </div>
 <script src="/public/js/lib/clipboard.js"></script>
-  <script src="/public/js/gradient.js"></script>
+  <script src="/public/js/randomgradient.js"></script>
 </body>
 
 </html>
