--- a/public/randomgradient.html
+++ b/public/randomgradient.html
@@ -28,6 +28,9 @@
 </div>
 <script src="/public/js/lib/clipboard.js"></script>
   <script src="/public/js/randomgradient.js"></script>
+  <script>
+    new Clipboard('.output');
+  </script>
 </body>
 
 </html>
