--- a/public/randomgradient.html
+++ b/public/randomgradient.html
@@ -26,11 +26,8 @@
     <div id='gradient'></div>
   </div>
 </div>
-<script src="/public/js/lib/clipboard.js"></script>
+<script src="/public/js/lib/clipboard.min.js"></script>
   <script src="/public/js/randomgradient.js"></script>
-  <script>
-    new Clipboard('.output');
-  </script>
 </body>
 
 </html>
