--- a/public/silk.html
+++ b/public/silk.html
@@ -18,7 +18,7 @@
 <body>
   
 <canvas id="canv"></canvas>
-
+<!-- This is from a tutorial, here is the link: https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwiqwviE3IfMAhUU1WMKHRnVBT0QFggdMAA&url=http%3A%2F%2Fthecodeplayer.com%2Fwalkthrough%2Fglazing-ribbon-screensaver-effect-in-html5-canvas&usg=AFQjCNGz7XxGIEgqOLt9-hpEGj973jNdwg&sig2=8i-k9LwWnIm1e_1mAbWhUw -->
   <script src="/public/js/silk.js"></script>
 </body>
 
