--- a/public/matrix.html
+++ b/public/matrix.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+  <!-- Taken from an amazing tutorial: http://thecodeplayer.com/walkthrough/matrix-rain-animation-html5-canvas-javascript -->
 <canvas id="canv"></canvas>
 <script src="/public/js/lib/feather.min.js"></script>
 <script src="/public/js/matrix.js"></script>
