--- a/public/randomgradient.html
+++ b/public/randomgradient.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-
+<!-- Modified from http://codepen.io/Scott-Hutcheson/pen/aNqvpx -->
 <div id='bg'></div>
 <div id='main'>
   <h1>Random Gradient</h1>
